# tino

./: .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
bot/: rust-architecture-handoff-2026-04-10.md
box/: module-optimization-checklist.md  module-optimization-plan.md  rust-tauri-boundary-guardrails.md
docs/: README.md
docs/01-discovery/: 个人信息流软件头脑风暴全过程.md
docs/02-product/: Tino AI 2.0 主战场定义.md  Tino AI 2.0 交互模式、上下文与写回协议.md  Tino AI 2.0 产品定义.md  Tino AI 2.0 文档索引.md  Tino AI 2.0 核心对象与主循环.md  Tino AI 2.0 结构性差异化.md  Tino AI 2.0 能力分层.md  Tino AI 2.0 输入通道与 Capture 体系.md  Tino AI 2.0 运行时护栏.md  Tino AI 2.0 非目标与阶段边界.md  Tino AI 能力地图 v0.2.md  Tino AI能力地图 v0.1.md  个人信息流软件需求原型文档.md
docs/03-planning/: AI Review 当前实现与 Mock 链路说明.md  AI融合与架构收敛执行计划 v0.1.md  HANDOFF.md  Home Chat Gemini化与多会话MVP计划 v0.1.md  MVP开发任务拆解.md  Tino AI 2.0 开发总计划.md  Tino AI Rethink 与模块开发基线 v1.md  Tino AI Runtime 与 Agent 工程方案 v0.1.md  Tino AI 开发期质量管线计划 v0.1.md  Tino AI 静默编译与显式意图执行方案 v0.1.md  Tino AI 静默编译优化与迁移方案 v0.1.md  技术冻结记录.md  日志规范.md  环境与打包流程.md
fixtures/ai-quality/: README.md
scripts/: ai-quality-replay.ts  install-macos-app.mjs  mock-ai-review-chain.mjs  setup-local-macos-signing.mjs  tauri-run.mjs
scripts/lib/: ai-quality-contracts.ts  ai-quality-scorer.ts
src/: index.css  main.tsx  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.development.conf.json  tauri.production.conf.json  tauri.staging.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_quality_replay.rs  app_idle.rs  app_state.rs  capture.rs  error.rs  home_chat.rs  ipc_events.rs  ipc_schema.rs  lib.rs  locale.rs  main.rs  native_window_macos.rs  panel_layout.rs  runtime_profile.rs  runtime_provider.rs  video_thumbnail.rs  vision_ocr.rs  window_state.rs
src-tauri/src/ai/: background_compiler.rs  batch_store.rs  capability.rs  compile_support.rs  contracts.rs  feedback_store.rs  knowledge_writer.rs  legacy_review.rs  mod.rs  ops.rs  provider_compile.rs  runtime_store.rs  system.rs  topic_index.rs  triage_store.rs
src-tauri/src/app_state/: chat.rs  link_metadata.rs  mod.rs  ocr.rs  runtime.rs  settings.rs  shortcuts.rs
src-tauri/src/backend/: mod.rs
src-tauri/src/backend/clipboard_history/: legacy.rs  migration.rs  mod.rs  pins.rs  read.rs  search.rs  write.rs
src-tauri/src/clipboard/: ingest.rs  link_metadata.rs  mod.rs  preview.rs  replay.rs  source_apps.rs  types.rs
src-tauri/src/clipboard/replay/: authorization.rs  focus.rs  mod.rs  pasteboard.rs
src-tauri/src/commands/: ai.rs  ai_ops.rs  chat.rs  mod.rs  shell.rs
src-tauri/src/storage/: app_paths.rs  capture_history_store.rs  interactive_chat_store.rs  knowledge_root.rs  mod.rs
src/app/: panel-window.tsx  providers.tsx  query-client.ts  query-keys.ts
src/bindings/: tauri.ts
src/components/: collection-empty-state.tsx
src/hooks/: use-clipboard-capture-control.ts  use-persist-app-settings-mutation.test.tsx  use-persist-app-settings-mutation.ts  use-persisted-app-settings.ts  use-window-close-guard.ts
src/i18n/: formatters.ts  hooks.ts  index.ts  preferences.ts  resources.ts  runtime.ts  text.ts
src/lib/: app-defaults.ts  app-settings-sync.test.ts  app-settings-sync.ts  external-links.ts  logger.ts  portal.ts  runtime-profile.ts  tauri-ai.ts  tauri-core.ts  tauri.ts  theme.test.ts  theme.ts  time.ts  utils.ts
src/routes/: root-shell.tsx
(+378 files in other folders)
