[package]
name = "tino"
version = "0.1.0"
description = "Personal information flow desktop shell"
authors = ["louistation"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "tino"

[lib]
name = "tino_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64 = "0.22"
block2 = "0.6"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
log = "0.4"
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "NSWorkspace", "NSRunningApplication", "NSImage", "NSBitmapImageRep", "NSImageRep"] }
objc2-foundation = { version = "0.3", features = ["block2"] }
objc2 = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
specta = "2.0.0-rc.24"
specta-typescript = "0.0.11"
tauri = { version = "2.10.3", features = ["protocol-asset", "tray-icon", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-specta = { version = "2.0.0-rc.24", features = ["typescript"] }
uuid = { version = "1", features = ["serde", "v7"] }
tauri-plugin-global-shortcut = "2"
